fixed gap

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -2,7 +2,7 @@
   display: grid;
   max-width: 944px;
   margin: 0 auto;
-  gap: 48px;
+  gap: 24px;
   grid-template-columns: repeat(4, 1fr);
 
   @media (max-width: 1023px) {
